--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,25 @@ a.nav-link .bi.bi-chevron-up::before{
 	border-radius: 1rem;
 	overflow: hidden;
 }
+
+.card-game {
+	padding: 3px;
+	border: 3px solid transparent;
+	border-radius: 1rem;
+	overflow: hidden;
+	transition: transform .6s;
+}
+
+.card-game.active {
+	border: 3px solid blue;
+}
+
+.card-game:hover {
+	border: 3px solid blue;
+	transform: translateY(-20px);
+	cursor: pointer;
+}
+
+.card-game img {
+	border-radius: calc(1rem - 6px);
+}
