--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ a.nav-link .bi.bi-chevron-up::before{
     position: absolute;
 }
 
+.btn-bord3,
+.btn-bord2,
 .btn-bord {
 	border: 2px solid transparent;
 	border-radius: 1rem;
@@ -110,11 +112,7 @@ a.nav-link .bi.bi-chevron-up::before{
     outline: 2px solid red;
 }
 
-.btn-bord2 {
-	border: 2px solid transparent;
-	border-radius: 1rem;
-	overflow: hidden;
-}
+/* section-2 */
 
 .card-game {
 	padding: 3px;
@@ -138,6 +136,30 @@ a.nav-link .bi.bi-chevron-up::before{
 	border-radius: calc(1rem - 6px);
 }
 
+/* section-3 */
+
 .text-blue{
     color: #2D64E6;
 }
+
+/* section-4 */
+
+.btn-bord3:hover {
+    border: 2px solid white; 
+    outline: 2px solid #2D64E6;
+}
+
+@media (min-width:768px) and (max-width:1399px){
+    .text-pad{
+        padding-top: 60px;
+    }
+}
+
+@media (min-width:1400px){
+    .text-pad{
+        padding-top: 270px;
+    }
+}
+
+/* section-5 */
+
