--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ a.nav-link .bi.bi-chevron-up::before{
 }
 
 .btn-bord2:hover {
-    border: 2px solid white; 
+    border: 2px solid black; 
     outline: 2px solid red;
 }
 
@@ -145,7 +145,7 @@ a.nav-link .bi.bi-chevron-up::before{
 /* section-4 */
 
 .btn-bord3:hover {
-    border: 2px solid white; 
+    border: 2px solid black; 
     outline: 2px solid #2D64E6;
 }
 
@@ -162,4 +162,33 @@ a.nav-link .bi.bi-chevron-up::before{
 }
 
 /* section-5 */
+
+.TM{
+    vertical-align: middle;
+}
+
+.play-border{
+    border-bottom: 2px solid #2D64E6;
+}
+
+.play-border2{
+    opacity: .5;
+}
+
+.play-border2:hover{
+    opacity: 1;
+    border-bottom: 2px solid #2D64E6;
+}
+
+@media (max-width:768px){
+    .play-border span{
+        display: none;
+    }
+    
+    .play-border2 span{
+        display: none;
+    }
+}
+
+/* section-6 */
 
