--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,8 @@ a.nav-link .bi.bi-chevron-up::before{
 /* section-4 */
 
 .btn-bord3:hover {
-    border: 2px solid black; 
-    outline: 2px solid #2D64E6;
+    border: 2px solid white; 
+    outline: 2px solid black;
 }
 
 @media (min-width:768px) and (max-width:1399px){
@@ -200,3 +200,16 @@ a.nav-link .bi.bi-chevron-up::before{
 
 /* section-7 */
 
+@media (max-width:576px){
+    .text-br{
+        padding-right:8em;
+    }
+}
+
+@media (min-width:1400px){
+    .text-font{
+        font-size: 1.2em;
+    }
+}
+
+/* section-8 */
