--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ a.nav-link .bi.bi-chevron-up::before{
     position: absolute;
 }
 
+.btn-bord4,
 .btn-bord3,
 .btn-bord2,
 .btn-bord {
@@ -228,3 +229,52 @@ a.nav-link .bi.bi-chevron-up::before{
 }
 
 /* section-9 */
+
+.back-lightgray{
+    background-color:#BEBCBB;
+}
+
+@media (min-width:768px) and (max-width:1399px){
+    .text-pad{
+        padding-top: 0px;
+    }
+}
+
+@media (min-width:1400px){
+    .text-pad2{
+        padding-top: 100px;
+    }
+}
+
+.btn-bord3:hover {
+    border: 2px solid #D9DADC; 
+    outline: 2px solid #D9DADC;
+}
+
+.btn-color{
+    background: #D9DADC;
+    color: #2D64E6;
+}
+
+@media (max-width:767px){
+    .img-plus{
+        display:none
+    }
+    .text-pad2 p{
+        font-size: .98em;
+    } 
+}
+
+@media (max-width:575px){
+        .text-pad2 p{
+            font-size: .95em;
+        }     
+}
+
+@media (min-width:1400px){
+    .text-pad2 p{
+        font-size: 1.3em;
+    }     
+}
+
+/* section-10 */
